--- a/index.html
+++ b/index.html
@@ -19,36 +19,29 @@
       </h1>
 
       <ul class="section--social">
-
-        <!--Links to relevant professional social media & resume -->
-        <!-- See: http://fontawesome.io/icons/#brand for more -->
-
-        <!-- Link to Linked In profile -->
         <li class="socialWrapper">
           <a class="color--skyBlue social"
              title="LinkedIn Profile"
              target="_blank"
-             href="#">
+             href="https://www.linkedin.com/in/markopellikka">
             <i class="fa fa-linkedin"></i>
           </a>
         </li>
 
-        <!-- Link to GitHub profile -->
         <li class="socialWrapper color--skyBlue">
           <a class="social color--skyBlue"
              title="GitHub Profile"
              target="_blank"
-             href="#">
+             href="https://github.com/eemapel">
             <i class="fa fa-github"></i>
           </a>
         </li>
 
-        <!-- Link to resume, probably a .pdf -->
         <li class="socialWrapper">
           <a class="social color--skyBlue"
-             title="Resume"
-             href="#">
-            <i class="fa fa-file-text"></i>
+             title="LaunchPad Profile"
+             href="https://launchpad.net/~eemapel">
+            <i class="fa fa-code"></i>
           </a>
         </li>
       </ul>
